microservices/k8s/cart.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cart-service
  namespace: microservices
  labels:
    app: cart-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cart-service
  template:
    metadata:
      labels:
        app: cart-service
    spec:
      containers:
        - name: cart-service
          image: 192.168.201.129/demo/cart-service:3-2eef7dd
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: cart-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: cart-service
  ports:
    - port: 80
      targetPort: 5000
