microservices/k8s/catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalog-service
  namespace: microservices
  labels:
    app: catalog-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: catalog-service
  template:
    metadata:
      labels:
        app: catalog-service
    spec:
      containers:
        - name: catalog-service
          image: 192.168.201.129/demo/catalog-service:66-c02bec9
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: catalog-service
  namespace: microservices
spec:
  type: ClusterIP
  selector:
    app: catalog-service
  ports:
    - port: 80
      targetPort: 5000
