microservices/k8s/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-service
  namespace: microservices
  labels:
    app: gateway-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-service
  template:
    metadata:
      labels:
        app: gateway-service
    spec:
      containers:
        - name: gateway-service
          image: 192.168.201.129/demo/gateway-service:1-e4ff1a3
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  namespace: microservices
spec:
  type: NodePort
  selector:
    app: gateway-service
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 30502
