microservices/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shop
  namespace: microservices
  annotations:
    cert-manager.io/cluster-issuer: kalem-ca-issuer
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - shop.murataksu.net
      secretName: shop-tls
  rules:
    - host: shop.murataksu.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 80
